ABXS-3L updates and podcast episode 17

--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled"> 
       <li>
+        <h4><a href="https://news.stoneagetools.com/sentinel-automation-technology-for-automated-heat-exchanger-cleaning-is-here">Sentinel Automation Technology for Automated Heat Exchanger Cleaning Is Here</a></h4>
+        <p>StoneAge Inc. is pleased to announce the official release of Sentinel Automation Technology for automated exchanger tube cleaning, delivering a 30% performance increase over traditional methods.<br>
+        <small><i class="fa fa-newspaper-o"></i> Blog, October 2021</small></p>
+      </li> 
+      <li>
         <h4><a href="https://news.stoneagetools.com/stoneage-inc-announces-new-director-of-engineering-kelley-crush/">StoneAge Announces New Director of Engineering, Kelley Crush</a></h4>
         <p>StoneAge Inc., leading global manufacturer of waterblast tools and equipment, welcomes new Director of Engineering, Kelley Crush.<br>
         <small><i class="fa fa-newspaper-o"></i> Blog, June 2021</small></p>
@@ -375,11 +380,6 @@ landing: yes
         <p>How the StoneAge 2″ Badger elevated the cleaning of a German refinery by completing all tasks perfectly, regardless of high level of contamination.<br>
         <small><i class="fa fa-newspaper-o"></i> Blog, November 2020</small></p>
       </li>
-      <li>
-        <h4><a href="https://news.stoneagetools.com/industry-training-in-the-era-of-covid-19/">Industry Training in the Era of COVID-19</a></h4>
-        <p>Water Jetting Association (WJA) certification goes virtual.<br>
-        <small><i class="fa fa-newspaper-o"></i> Blog, October 2020</small></p>
-      </li> 
       <li><a href="https://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
@@ -390,10 +390,10 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sa-esop-vid">
-      <img src="assets/vid/thumb/sa-esop-vid.jpg" alt="OWN IT: A Colorado Story" class="img-responsive" />
+    <a href="/17-jerry-carter">
+      <img src="assets/img/podcast/episode-17-jerry-carter.jpg" alt="Episode 17: High-Pressure Hosing Innovation" class="img-responsive" />
     </a>
-    <p style="padding-top: 10px;"><strong>OWN IT: A Colorado Story</strong><br><span class="grey">A short documentary film about employee ownership culture in Colorado</span></p>
+    <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 17</strong><br><span class="grey">High-Pressure Hosing Innovation featuring Jerry Carter of SpirStar</span></p>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
     </div>
