--- a/lp-sentinel-OLD.html
+++ b/lp-sentinel-OLD.html
@@ -2,7 +2,7 @@
 layout: default
 page-type: page
 title: Sentinel Automation Technology for Exchanger Tube Cleaning
-permalink: /sentinel
+permalink: /sentinel-2020
 master-slider: yes
 ---
 
