--- a/manuals.html
+++ b/manuals.html
@@ -66,10 +66,10 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/abx-3l">ABX-3L-V2</a><br></td>
-                <td>AUTOBOX ABX-3L-V2<br>Automated system for triple flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a><br><small class="grey">Updated: 09/2020</small></td>
-                <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
+                <td><a href="/abx-3l">ABXS-3L-V3</a><br></td>
+                <td>AUTOBOX 3L<br>Sentinel-enabled automated system for triple flex lancing of exchanger tube IDs</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABXS-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 689</a><br><small class="grey">Updated: 09/2021</small></td>
+                <td class="text-center"><a href="/assets/pdf/data-sheets/Sentinel_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2018</small></td>
                 <td class="text-center"></td>
               </tr>
@@ -371,9 +371,9 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/lightweight-positioner">LWP-500-V2</a></td>
-                <td>LIGHTWEIGHT POSITIONER<br>For AutoBox ABX-2L exchanger cleaning/tube indexing</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 610-V2</a><br><small class="grey">Updated: 11/2019</small></td>
+                <td><a href="/lightweight-positioner">LWPS-100</a></td>
+                <td>LIGHTWEIGHT POSITIONER<br>For AutoBox exchanger cleaning/tube indexing (Sentinel-ready)</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 690</a><br><small class="grey">Updated: 09/2021</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -775,9 +775,15 @@ permalink: /manuals
               </tr>
               <tr>
                 <td>ABX-3L</td>
-                <td>AUTOBOX ABX-3L - Version 1
+                <td>AUTOBOX ABX-3L - Version 1</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-3L.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>ABX-3L-V2<br></td>
+                <td>AUTOBOX ABX-3L-V2 - Version 2</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"></td>
               </tr>
               <tr>
                 <td>ABX-500</td>
@@ -964,6 +970,12 @@ permalink: /manuals
                 <td>Yellow Jacket boiler cleaner</td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_JKT.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td><a href="/lightweight-positioner">LWP-500-V2</a></td>
+                <td>Lightweight Positioner - No Sentinel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"></td>
               </tr>
               <tr>
                 <td>MT</td>
