--- a/waterblast-automation/autopack-3l.html
+++ b/waterblast-automation/autopack-3l.html
@@ -65,6 +65,7 @@ master-slider: yes
         <li>Standardized kits keep your workforce organized and efficient</li>
         <li>Job box protects your equipment, simplifies transport and minimizes set-up time</li>
         <li>Customized storage inserts allow for quick visual inventory management</li>
+        <li><a href="/sentinel">Sentinel-ready</a></li>
       </ul>
       
       <div class="accessories">
@@ -164,15 +165,14 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/AutoPack-3L.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoPack-3L Manuals (Binder)</a></li>
-            <li><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L Manual</a></li>
-            <li><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;Lightweight Positioner Manual</a></li>
+            <li><a href="/assets/pdf/manuals/AutoPack-3L_manuals.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoPack-3L Manuals (Binder)</a></li>
+            <li><a href="/assets/pdf/manuals/ABXS-3L_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L Manual</a></li>
+            <li><a href="/assets/pdf/manuals/LWPS-100_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;Lightweight Positioner Manual</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/reference/AutoPack-3L_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack-3L Job Box Contents</a></li>
             <li><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-3L Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-3L Tool Talk</a></li>
           </ul>
