--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -66,6 +66,7 @@ master-slider: yes
         <li>Modular and expandable</li>
         <li>Quick set-up</li>
         <li>Durable stainless steel air motors</li>
+        <li><a href="/sentinel">Sentinel-ready</a></li>
       </ul>
       
       <div class="accessories">
@@ -98,7 +99,7 @@ master-slider: yes
           <tbody>
             <tr>
               <th>Tool Model</th>
-              <td colspan="2">LWP-500-V2</td>
+              <td colspan="2">LWPS-100</td>
             </tr>
             <tr>
               <th>Horizontal Length&#42;</th>
@@ -117,7 +118,7 @@ master-slider: yes
             </tr>
           </tbody>
           </table>
-          <p>&#42;<em>Custom rail lengths available</em></p>
+          <p>&#42;<em>Additional rail extension lengths available</em></p>
         </div>
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
           <h3>Need Support?</h3>
@@ -131,7 +132,8 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Positioner Manual</a></li>
+            <li><a href="/assets/pdf/manuals/LWPS-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;LWPS-100 Manual</a></li>
+            <li><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;LWP-500-V2 Manual (No Sentinel)</a><em class="grey">Discontinued</em></li>
           </ul>
         </div>
         <div class="col-sm-4">
