--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -59,9 +59,9 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix exchanger-cleaning" data-name="autopack-3l" data-designation="automated">
       <a href="/autopack-3l" class="search-text">
-        <img src="/assets/img/product/autopack-3l-01.jpg" class="img-responsive" />
+        <img src="/assets/img/product/autopack-3l-05.jpg" class="img-responsive" />
         <h3>AutoPack-3L</h3>
-        <h5>Automated Equipment Kit</h5>
+        <h5>Automated Equipment Kit with Sentinel Automation Technology</h5>
         <table class="table">
           <tbody>
             <tr>
@@ -176,7 +176,7 @@ permalink: /waterblast-tools-automated-equipment
     <div class="mix exchanger-cleaning" data-name="abx-2l" data-designation="automated">
       <a href="/abx-2l" class="search-text">
         <img src="/assets/img/product/abx-2l-01.jpg" class="img-responsive" />
-        <h3>AutoBox ABX-2L</h3>
+        <h3>AutoBox 2L</h3>
         <h5>Dual flex-lancing system</h5>
         <table class="table">
           <tbody>
@@ -196,9 +196,9 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix exchanger-cleaning" data-name="abx-3l" data-designation="automated">
       <a href="/abx-3l" class="search-text">
-        <img src="/assets/img/product/abx-3l-04.jpg" class="img-responsive" />
-        <h3>AutoBox ABX-3L</h3>
-        <h5>Triple flex-lancing system</h5>
+        <img src="/assets/img/product/abx-3l-09.jpg" class="img-responsive" />
+        <h3>AutoBox 3L</h3>
+        <h5>Triple flex-lancing system with Sentinel Automation Technology</h5>
         <table class="table">
           <tbody>
             <tr>
