--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -77,6 +77,7 @@ master-slider: yes
         <li>Hose clamp pressure and feed rates can be remotely adjusted on the fly for repeatable, consistent cleaning</li>
         <li>Proven reliability on the toughest jobs and most corrosive environments</li>
         <li>Low cost of ownership – low cost components, quick and easy maintenance</li>
+        <li><a href="/sentinel">Sentinel-ready</a></li>
       </ul>
       
       <div class="accessories">
@@ -117,7 +118,7 @@ master-slider: yes
             </tr>
             <tr>
               <th>Tool Model</th>
-              <td colspan="2">ABX-3L-V2</td>
+              <td colspan="2">ABXS-3L-V3</td>
             </tr>
             <tr>
               <th>Hose Size</th>
@@ -195,7 +196,8 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L Manual</a></li>
+            <li><a href="/assets/pdf/manuals/AB-3L_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABXS-3L-V3 Manual</a></li>
+            <li><a href="/assets/pdf/manuals/ABX-3L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L-V2 Manual (No Sentinel)</a><em class="grey"> Discontinued</em></li>
           </ul>
         </div>
         <div class="col-sm-4">
